--- a/web/index.html
+++ b/web/index.html
@@ -1,18 +1,56 @@
+<!DOCTYPE html>
+<html lang="es">
 <head>
-  <link>
-  <title>IgualadaSat web</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Layout con Flexbox</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    header {
+      background-color: #3498db;
+      height: 40px;
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      height: calc(100vh - 40px); /* Altura total de la ventana menos la altura del encabezado */
+    }
+
+    .box {
+      flex: 1;
+      box-sizing: border-box;
+      margin: 0 -10px;
+      height: 50%; /* Cada caja ocupa la mitad de la altura del contenedor */
+    }
+
+    #box1, #box2, #box3 {
+      background-color: #e74c3c;
+      margin: 0;
+    }
+
+    #box4 {
+      flex: 2; /* El cuarto div ocupa el doble de espacio que los demás */
+      background-color: #2ecc71;
+      margin: 0;
+      width:100vw;
+    }
+  </style>
 </head>
 <body>
-
-<div id="conrtol-panel"></div>
-<div id="canvas-div"></div>
-<div id="bash-consol"></div>
-<div id="graphs"></div>
-
+  <header></header>
+  <div class="container">
+    <div class="box" id="box1"></div>
+    <div class="box" id="box2"></div>
+    <div class="box" id="box3"></div>
+    <div class="box" id="box4"></div>
+  </div>
 </body>
-
-<script>
-
-
-
-</script>
+</html>
