--- a/web/index.html
+++ b/web/index.html
@@ -1,56 +1,44 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Layout con Flexbox</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    header {
-      background-color: #3498db;
-      height: 40px;
-    }
-
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-      height: calc(100vh - 40px); /* Altura total de la ventana menos la altura del encabezado */
-    }
-
-    .box {
-      flex: 1;
-      box-sizing: border-box;
-      margin: 0 -10px;
-      height: 50%; /* Cada caja ocupa la mitad de la altura del contenedor */
-    }
-
-    #box1, #box2, #box3 {
-      background-color: #e74c3c;
-      margin: 0;
-    }
-
-    #box4 {
-      flex: 2; /* El cuarto div ocupa el doble de espacio que los demás */
-      background-color: #2ecc71;
-      margin: 0;
-      width:100vw;
-    }
-  </style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Cansat App</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-  <header></header>
-  <div class="container">
-    <div class="box" id="box1"></div>
-    <div class="box" id="box2"></div>
-    <div class="box" id="box3"></div>
-    <div class="box" id="box4"></div>
-  </div>
+
+<header class="header">
+	<b>Vista 1</b> <b>Vista 2</b>
+</header>
+
+<div id="body">
+	<div id="top-menu">
+		<div id="fase">
+			<h2 id="fases">Fases:</h2>
+			<div id="buttons">
+				<button id="fase1">Init</button>
+				<button id="fase2">Aire</button>
+				<button id="fase3">Tierra</button>
+			</div>
+		</div>
+		<div id="pannel">
+			<canvas id="3d"></canvas>
+		</div>
+		<div id="log">
+			<h2 id="chat">Terminal:</h2>
+			<textarea id="terminal"></textarea>
+		</div>
+	</div>
+	<div id="bot-menu">
+		<div class="header">
+			<b>Grafico 1</b> <b>Grafico 2</b>
+		</div>
+		<div id="graph">
+			<canvas id="graphics"></canvas>
+		</div>
+	</div>
+</div>
+
 </body>
 </html>
