--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="header">
-	<b>Vista 1</b> <b>Vista 2</b>
+	<b class="vista">Vista 1</b> <b class="vista">Vista 2</b>
 </header>
 
 <div id="body">
@@ -17,9 +17,9 @@
 		<div id="fase">
 			<h2 id="fases">Fases:</h2>
 			<div id="buttons">
-				<button id="fase1">Init</button>
-				<button id="fase2">Aire</button>
-				<button id="fase3">Tierra</button>
+				<button class="fase" id="fase1">Init</button>
+				<button class="fase" id="fase2">Aire</button>
+				<button class="fase" id="fase3">Tierra</button>
 			</div>
 		</div>
 		<div id="pannel">
@@ -42,6 +42,7 @@
 
 </body>
 
+<script type="text/javascript" src="src/app.js"></script>
 <script type="text/javascript" src="src/main.js"></script>
 
 </html>
