--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Cansat App</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="icon" href="favicon.png" type="image/x-icon">
 </head>
 <body>
 
 <header class="header">
-	<b class="vista">Vista 1</b> <b class="vista">Vista 2</b>
+	<b class="vista">Config</b> <b class="vista">Control</b>
 </header>
 
 <div id="body">
