--- a/app/index.html
+++ b/app/index.html
@@ -16,15 +16,10 @@
 <div id="body">
 	<div id="top-menu">
 		<div id="fase">
-			<h2 id="fases">Fases:</h2>
-			<div id="buttons">
-				<button class="fase" id="fase1">Init</button>
-				<button class="fase" id="fase2">Aire</button>
-				<button class="fase" id="fase3">Tierra</button>
-			</div>
+			<iframe id="0" src="parts/config.html" width="200" frameborder="0"></iframe>
 		</div>
 		<div id="pannel">
-			<canvas id="3d"></canvas>
+			<iframe id="0" src="parts/canvas.html" width="200" frameborder="0"></iframe>
 		</div>
 		<div id="log">
 			<h2 id="chat">Terminal:</h2>
