--- a/app/index.html
+++ b/app/index.html
@@ -10,16 +10,16 @@
 <body>
 
 <header class="header">
-	<b class="vista">Config</b> <b class="vista">Control</b>
+	<b class="vista">config</b> <b class="vista">control</b>
 </header>
 
 <div id="body">
 	<div id="top-menu">
 		<div id="fase">
-			<iframe id="0" src="parts/config.html" width="200" frameborder="0"></iframe>
+			<iframe id="menul" src="parts/config.html" width="200" frameborder="0"></iframe>
 		</div>
 		<div id="pannel">
-			<iframe id="0" src="parts/canvas.html" width="200" frameborder="0"></iframe>
+			<iframe id="3d" src="parts/canvas.html" width="200" frameborder="0"></iframe>
 		</div>
 		<div id="log">
 			<h2 id="chat">Terminal:</h2>
