--- a/app/parts/config.html
+++ b/app/parts/config.html
@@ -16,4 +16,15 @@
 </div>
 
 </body>
+
+<script type="text/javascript">
+	
+//FASES
+let fases = document.getElementsByClassName("fase");
+for(let i = 0;i < fases.length;i++)
+	fases[i].addEventListener("click",()=>{window.alert(fases[i].innerHTML)});
+
+	
+</script>
+
 </html>
