--- a/app/parts/canvas.html
+++ b/app/parts/canvas.html
@@ -13,10 +13,7 @@
 	let canvas = document.getElementById("3d")
 	let ctx = canvas.getContext("2d")
 
-	ctx.fillStyle = "#fff";
-	ctx.fillRect(0,0,1000000,1000000)
-	ctx.fillStyle = "#f00";
-	for(let i = 0;i < 100; i++)
-		ctx.fillRect(i*20,10,10,10)
+	ctx.fillStyle = "#000";
+	ctx.fillRect(0,0,1000,1000)
 </script>
 </html>
