--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,7 @@
 			<iframe id="3d" src="parts/canvas.html" width="200" frameborder="0"></iframe>
 		</div>
 		<div id="log">
-			<h2 id="chat">Terminal:</h2>
-			<textarea id="terminal"></textarea>
+			<iframe id="terminal" src="parts/terminal.html"></iframe>
 		</div>
 	</div>
 	<div id="bot-menu">
